Update run-dfa-simulator.bat